--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,70 +1,60 @@
 ::-webkit-scrollbar {
-  width: 6px !important;
+  width: 1px !important;
   height: 6px !important;
 }
 ::-webkit-scrollbar {
   width: 5px;
-}
-::-webkit-scrollbar {
-  width: 6px !important;
-  height: 6px !important;
-}
-::-webkit-scrollbar {
-  width: 5px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.5);
-}
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.5);
-}
-::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
-}
-::-webkit-scrollbar-thumb {
-  background: var(--blue-main);
-  border-radius: 0;
-}
-::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
-}
-::-webkit-scrollbar-thumb {
-  background: var(--blue-main);
-  border-radius: 0;
-}
-::-webkit-scrollbar-track {
-  background: #fff;
-}
-::-webkit-scrollbar-track {
-  background: #fff;
 }
 
-::selection {
-  background-color: var(--blue-main);
-  color: #fff;
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
-::selection {
-  background-color: var(--blue-main);
-  color: #fff;
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--blue-main);
+  border-radius: 0;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--blue-main);
+  border-radius: 0;
+}
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+::-webkit-scrollbar-track {
+  background: #fff;
 }
 
 .bg-body-tertiary {
-    background-color: black !important;
+  background-color: black !important;
 }
 
 p,
 li,
+div {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
-h6,
-div {
-    font-family: Arial, Helvetica, sans-serif;  
-    color: white;
+h6 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-weight: bold;
 }
 
 li {
