--- a/src/component/Slider/slider.css
+++ b/src/component/Slider/slider.css
@@ -1,7 +1,7 @@
 .backgroundImageStyles {
   align-items: center;
   background-attachment: fixed;
-  background-image: url(../../assets/images/download.png);
+  background-image: url(../../assets/images/Banner.jpeg);
   background-position: right 0%;
   background-repeat: no-repeat;
   background-size: 50%;
