--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -36,13 +36,13 @@
 }
 
 .bg-body-tertiary {
-  background-color: black !important;
+  background-color: #111111 !important;
 }
 
 p,
 li,
 div {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
   color: white;
 }
 
@@ -52,7 +52,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
   color: white;
   font-weight: bold;
 }
@@ -63,7 +63,18 @@ li {
 }
 
 p {
-  line-height: 1.7;
-  font-size: 18px;
+  font-size: 16px;
+  line-height: 22px;
   color: white;
+}
+
+.fs-6 {
+  font-size: 14px !important;
+}
+
+@media only screen and (max-width: 600px) {
+  p {
+    font-size: 16px !important;
+    line-height: 26px !important;
+  }
 }
