--- a/src/component/Contact/contact.css
+++ b/src/component/Contact/contact.css
@@ -20,6 +20,11 @@
 
 .form-control::placeholder {
   color: black;
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  align-content: flex-end;
+  justify-content: center;
 }
 
 .form-control:focus {
@@ -28,4 +33,8 @@
   border-color: unset;
   outline: 0;
   box-shadow: unset;
+}
+
+.icon-tags {
+  color: white;
 }
