--- a/src/component/Slider/slider.css
+++ b/src/component/Slider/slider.css
@@ -1,10 +1,10 @@
 .backgroundImageStyles {
   align-items: center;
   background-attachment: fixed;
-  background-image: url(../../assets/images/Banner.png);
-  background-position: right 0%;
+  background-image: url(../../assets/images/slider2.jpg);
+  background-position: 50%;
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: 100%;
   display: flex;
   height: 100vh;
   isolation: isolate;
@@ -21,6 +21,16 @@
   /* Styles for small screens */
   .backgroundImageStyles {
     padding: 0px 20px;
-    background-size: 100%;
+    background-size: 860px;
+    background-position: 100%;
   }
+}
+
+.backgroundImageStyles :after {
+  background: #000000;
+  content: "";
+  inset: 0;
+  opacity: 0.18;
+  position: absolute;
+  z-index: -1;
 }
