--- a/src/component/Contact/contact.css
+++ b/src/component/Contact/contact.css
@@ -19,7 +19,7 @@
 }
 
 .form-control::placeholder {
-  color: black;
+  color: #2a2a2a;
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
@@ -29,7 +29,7 @@
 
 .form-control:focus {
   color: black;
-  background-color: #3a3a3a;
+  background-color: #6b6b6b;
   border-color: unset;
   outline: 0;
   box-shadow: unset;
