--- a/src/component/About/about.css
+++ b/src/component/About/about.css
@@ -2,6 +2,10 @@
   height: 450px;
 }
 
+.aboutContentHei{
+  height: 84vh;
+}
+
 @media only screen and (max-width: 600px) {
   .aboutImageStyles {
     height: 400px;
@@ -17,7 +21,6 @@
   font-size: 16px;
   line-height: 22px;
 }
-
 
 .hexagon {
   height: 200px;
@@ -41,7 +44,8 @@
   text-decoration: none;
   background: 0 0;
   border: 0;
-  transition: color .15sease-in-out, background-color .15sease-in-out, border-color .15sease-in-out;
+  transition: color 0.15sease-in-out, background-color 0.15sease-in-out,
+    border-color 0.15sease-in-out;
   border-bottom: 2px solid black;
 }
 
@@ -54,14 +58,17 @@
   text-decoration: none;
   background: 0 0;
   border: 0;
-  transition: color .15sease-in-out, background-color .15sease-in-out, border-color .15sease-in-out;
+  transition: color 0.15sease-in-out, background-color 0.15sease-in-out,
+    border-color 0.15sease-in-out;
   border-bottom: 2px solid black;
-  background: #2c2c2c;
+  background-color: #000000;
+  background-image: linear-gradient(180deg, #000000 40%, #434343 125%);
   border-bottom: 2px solid dimgray;
 }
 
 .nav_bar_style:hover {
-  background: #2c2c2c;
+  background-color: #000000;
+  background-image: linear-gradient(180deg, #000000 40%, #434343 125%);
   border-bottom: 2px solid dimgray;
 }
 
