--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -42,7 +42,7 @@
 p,
 li,
 div {
-  font-family: Roboto, sans-serif;
+  font-family: "Anek Devanagari", sans-serif;
   color: white;
 }
 
@@ -52,7 +52,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Roboto, sans-serif;
+  font-family: "Anek Devanagari", sans-serif;
   color: white;
   font-weight: bold;
 }
