--- a/src/component/Slider/slider.css
+++ b/src/component/Slider/slider.css
@@ -1,7 +1,7 @@
 .backgroundImageStyles {
   align-items: center;
   background-attachment: fixed;
-  background-image: url(../../assets/images/slider11.jpg);
+  background-image: url(../../assets/images/slider11.webp);
   background-position: center 100%;
   background-repeat: no-repeat;
   background-size: 1490px;
