--- a/src/component/Contact/contact.css
+++ b/src/component/Contact/contact.css
@@ -1,5 +1,4 @@
 .form-control {
-  background: #6b6b6b;
   color: black;
   box-shadow: unset;
   margin-bottom: 25px;
@@ -13,13 +12,14 @@
   -moz-appearance: none;
   appearance: none;
   background-clip: padding-box;
-  border: unset;
+  border: 1px solid #d7d7d7;
   border-radius: 15px;
+  background: #f8f8f8;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .form-control::placeholder {
-  color: #2a2a2a;
+  color: #6c757d;
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
@@ -28,9 +28,10 @@
 }
 
 .form-control:focus {
-  color: black;
-  background-color: #6b6b6b;
+  /* color: black; */
+  /* background-color: #6b6b6b; */
   border-color: unset;
+  border: 1px solid #d7d7d7;
   outline: 0;
   box-shadow: unset;
 }
@@ -42,10 +43,4 @@
 textarea {
   resize: none;
   height: 200px;
-}
-
-@media not all and (max-width: 767px) {
-  .full-height {
-    height: var(--vh);
-  }
 }
