--- a/src/component/Experience/experience.css
+++ b/src/component/Experience/experience.css
@@ -1,33 +1,20 @@
-.my_card {
-  width: 32%;
-  padding: 2rem;
+.experience-heading {
+  font-size: 32px !important;
 }
 
-.card {
-  background-color: #000000;
-  background-image: linear-gradient(147deg, #000000 40%, #434343 100%);
-  border: none;
+.number-div {
+  display: flex;
+  justify-content: center;
+  padding: 0px;
+  /* margin-right: 2rem !important; */
 }
 
-.my_card:hover {
-  transform: translateY(-8px);
-  transition: all 0.3s ease-in-out;
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+.number-text {
+  color: #5171f1;
+  height: 40px;
+  margin-top: 4px !important;
 }
 
-.title-styles {
-  color: #c0c0c0;
-}
-
-.list-styles {
-  color: #c0c0c0;
-  padding: 0rem 1rem;
-}
-
-.details-container {
-  background: -webkit-linear-gradient(180deg, #2b2b2b, #111111, #111111);
-  background: linear-gradient(180deg, #2b2b2b, #111111, #111111);
-  padding: 50px;
-  border-radius: 20px;
+.role-styles {
+  color: #5171f1;
 }
