--- a/src/component/Project/project.css
+++ b/src/component/Project/project.css
@@ -1,35 +1,14 @@
-.flip-card {
-  perspective: 1000px;
-  cursor: pointer;
+.project-heading {
+  font-size: 32px !important;
+  color: #5171f1;
 }
 
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  /* height: 100%; */
-  transform-style: preserve-3d;
-  transition: transform 0.6s;
+.project-card {
+  transition: all 0.3s ease;
 }
 
-.flip-card.flipped .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  /* height: 100%; */
-  backface-visibility: hidden;
-}
-
-.flip-card-back {
-  transform: rotateY(180deg);
-}
-
-.details-container-proj {
-  background-color: #485461;
-  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);  
-  padding: 25px;
-  border-radius: 20px;
+.project-card:hover {
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2),
+    -4px -4px 10px rgba(255, 255, 255, 0.8);
+  transform: translateY(-4px);
 }
