--- a/src/component/Services/service.css
+++ b/src/component/Services/service.css
@@ -4,7 +4,7 @@
   border: none;
   transition: all 0.4s ease;
   flex: unset !important;
-  width: 23rem;
+  /* width: 20rem; */
   margin-bottom: 2rem;
   cursor: default;
 }
